and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *

     ----------------------------------------------------------

07 November 14: V.Ivanchenko (emstand-V10-00-50)
- G4GoudsmitSaundersonMscModel - fixed displacement computation

27 October 14: V.Ivanchenko (emstand-V10-00-49)
- G4GoudsmitSaundersonMscModel - fixed rare division by zero

27 October 14: V.Ivanchenko (emstand-V10-00-48)
- G4WentzelVIModel, G4WentzelOKandVIxSection, G4WentzelVIRelXSection
    use G4EmParameters class for initialisation

24 October 14: V.Ivanchenko (emstand-V10-00-47)
- G4DeltaAngle - comment out warning happens frequently for 
    low-enegry electrons

24 October 14: V.Ivanchenko (emstand-V10-00-46)
- G4CoulombScattering - use G4EmParameters
- G4WentzelVIModel - refinment of lateral displacement
- G4UrbanMscModel - refinment of lateral displacement 
- G4WentzelOKandVIxSection - fixed sampling in single scattering

16 October 14: V.Ivanchenko (emstand-V10-00-45)
- G4eIonisation, G4hIonisation, G4ionIonisation, G4eBremsstrahlung,
  G4GammaConversion, G4ComptonScattering, G4PhotoElectricEffect
    - use G4EmParameterisation at initialisation

14 October 14: V.Ivanchenko (emstand-V10-00-44)
- G4PEEffectFluoModel - fixed threshold cross section
- G4GammaConversion - minor fix of initialisation

07 October 14: L.Urban
- G4UrbanMscModel corrs to speed up (if --> min,max,
  random numbers using rndmEngineMod pointer) 

06 October 14: L. Urban (emstand-V10-00-43)
- G4UrbanMscModel - added new step limit type UseSafetyPlus 

8 September 14: V.Ivanchenko (emstand-V10-00-42)
- G4PairProductionRelModel, G4eBremsstrahlungRelModel - added 
    protection at initialisation for the case when user artifitially
    reducing high energy limit of the model (bug #1670)
